Removed unused options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,7 @@ dependencies = [
     "swig",
     "swig",
     "bbrl_gymnasium>=0.3.5",
-    "bbrl_gymnasium[box2d]",
-    "bbrl_gymnasium[classic_control]",
+    "bbrl_gymnasium",
     "tensorboard",
     "moviepy",
     "box2d-kengz",
