--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ dynamic = ["version"]
 readme = { file = "README.md", content-type = "text/markdown" }
 authors = [{ name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr" }]
 dependencies = [
-    "bbrl>=0.2.2",
+    "easypip",
+    "bbrl>=0.3.1",
     "bbrl_gymnasium>=0.3.5",
     "tensorboard",
     "moviepy",
